# mura_test

./: .env.dev.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.common.yml  compose.dev.yml  compose.prod.yml
app/: Dockerfile  alembic.ini  config.py  logging.conf  main.py  pyproject.toml
app/domain/constants/enums/: exception_code.py
app/domain/entities/: email.py  order.py
app/domain/entities/common/: base.py
app/domain/exceptions/: custom_validation.py
app/domain/ports/: ai.py
app/domain/ports/common/: generic_data_port.py
app/domain/schemas/: common.py  email.py  order.py
app/domain/use_cases/: email.py  generic_crud.py
app/infrastructure/: db.py
app/infrastructure/adapters/ai/: chatgpt.py
app/infrastructure/adapters/common/: generic_sqlalchemy_adapter.py
app/infrastructure/adapters/data/: email_sqlalchemy_adapter.py  order_sqlalchemy_adapter.py
app/infrastructure/api/query_filters/: common.py  email.py  order.py
app/infrastructure/api/responses/: __init__.py
app/infrastructure/api/responses/exception_handlers/: __init__.py  api.py  custom_validation.py  db.py  pydantic.py
app/infrastructure/api/routers/: base.py  email.py  index.py  order.py
app/infrastructure/api/schemas/: email.py  order.py
app/infrastructure/api/schemas/common/: __init__.py
app/infrastructure/constants/enums/: exception_code.py  order.py
app/infrastructure/exceptions/: chatgpt.py
app/infrastructure/models/: __init__.py  email.py  order.py
app/infrastructure/models/common/: __init__.py  soft_delete.py
app/infrastructure/translators/: generic.py
app/migrations/: env.py
app/migrations/versions/: 20250312_0026-96591ba04d65_create_order_table.py  20250313_0419-e62f10782e65_create_order_and_email_table.py  20250314_0353-1bc7e00a3989_.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: dataProvider.ts
frontend/src/components/: EmailComponents.tsx  OrderComponents.tsx  ReceiveEmailButton.tsx
frontend/src/constants/: enums.ts
frontend/src/pages/: CombinedPage.tsx  _app.tsx  index.tsx
